[Terry N.] use installed jedit.jar

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,7 @@ javac.classpath=\
     lib/ErrorList.jar:\
     lib/guava-19.0.jar:\
     lib/java-prolog-parser-2.0.2.jar:\
-    lib/jedit.jar:\
+    ${jedit.jar}:\
     lib/kryo-5.6.2.jar:\
     lib/sigmaAntlr.jar:\
     lib/sigmakee.jar:\
