--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -77,10 +77,11 @@ run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}:\
+    ${build.test.classes}:\
     lib/minlog-1.3.1.jar:\
     lib/objenesis-3.4.jar:\
-    lib/reflectasm-1.11.9.jar
+    lib/reflectasm-1.11.9.jar:\
+    lib/tomcat-servlet-api-9.0.97.jar
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
