--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,7 @@
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
 #build.home=build
-build.classes.dir=${build.home}/classes
+#build.classes.dir=${build.home}/classes
 #build.test.classes.dir=${build.home}/test/classes
 # Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
