--- a/build.xml
+++ b/build.xml
@@ -84,22 +84,23 @@
         </path>
     </target>
 
-    <target name="sigma.antlr" depends="init-ivy">
+    <target name="init" depends="init-ivy">
+        <mkdir dir="${build.home}/classes"/>
+        <echo message="JEDIT_HOME is set to = ${jedit.home}"/>
+        <echo message="SIGMA_HOME is set to = ${env.SIGMA_HOME}"/>
+    </target>
+
+    <target name="sigma.antlr" depends="init">
         <!-- Builds the SigmaUtils and TPTP jars as part of SigmaKEE's init -->
-        <ant antfile="../sigmaAntlr/build.xml" inheritAll="false" target="all"/>
+        <!--<ant antfile="../sigmaAntlr/build.xml" inheritAll="false" target="all"/>-->
+        <ant dir="../sigmaAntlr" useNativeBasedir="true" inheritAll="false"/>
         <copy todir="lib" file="../sigmakee/build/sigmakee.jar"/>
         <copy todir="lib" file="../sigmaAntlr/sigmaAntlr.jar"/>
         <copy todir="lib" file="${tptp.home}/tptp.jar"/>
         <copy todir="lib" file="../SigmaUtils/sigmaUtils.jar"/>
     </target>
 
-    <target name="init" depends="sigma.antlr">
-        <mkdir dir="${build.home}/classes"/>
-        <echo message="JEDIT_HOME is set to = ${jedit.home}"/>
-        <echo message="SIGMA_HOME is set to = ${env.SIGMA_HOME}"/>
-    </target>
-
-    <target name="compile" depends="init" description="Compile ${app.name}">
+    <target name="compile" depends="sigma.antlr" description="Compile ${app.name}">
         <javac destdir="${build.home}/classes"
                debug="on"
                optimize="on"
