--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -18,10 +18,9 @@ jobs:
     container:
         image: apease/sigmakee:latest
     env:
-      # Explicitly set SIGMA_HOME
-      SIGMA_HOME: /root/sigmakee-runtime
-      ONTOLOGYPORTAL_GIT: ${{ github.workspace }}
+      SIGMA_HOME: ${{ github.workspace }}/sigmakee-runtime
       SIGMA_SRC: ${{ github.workspace }}/sigmakee
+      ONTOLOGYPORTAL_GIT: ${{ github.workspace }}
 
     steps:
       - name: checkout SUMOjEdit
@@ -53,23 +52,34 @@ jobs:
           repository: 'ontologyportal/SigmaUtils'
           path: SigmaUtils
 
+      - name: checkout sumo
+        uses: actions/checkout@v4
+        with:
+          repository: 'ontologyportal/sumo'
+          path: sumo
+
       - name: Set up JDK 21 for x64
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Set up Ant
-        uses: cedx/setup-ant@v3
-        with:
-          optional-tasks: true
-          version: latest
-
       - name: Build with Ant
         env:
           JEDIT_HOME: $ONTOLOGYPORTAL_GIT/.jedit
         working-directory: ./SUMOjEdit
         run: ant
+
+      - name: Setup SIGMA_HOME
+        env:
+        working-directory: ${{ github.workspace }}
+        run: |
+          echo "SIGMA_HOME: $SIGMA_HOME"
+          echo "SIGMA_SRC: $SIGMA_SRC"
+          echo "ONTOLOGYPORTAL_GIT: $ONTOLOGYPORTAL_GIT"
+          mkdir -p $SIGMA_HOME/KBs/WordNetMappings
+          cp -R $ONTOLOGYPORTAL_GIT/sumo/* $SIGMA_HOME/KBs
+          cp /opt/WordNet-3.0/dict/* $SIGMA_HOME/KBs/WordNetMappings/
 
       - name: Run unit tests
         working-directory: ./SUMOjEdit
