[Terry N.] painful... we need jedit.jar for CI/CD to work

--- a/build.xml
+++ b/build.xml
@@ -154,6 +154,7 @@
             </fileset>
             <fileset dir="lib">
                 <exclude name="ErrorList.jar"/>
+                <exclude name="jedit.jar"/>
             </fileset>
         </delete>
     </target>
