[Terry N.] just compile test

--- a/build.xml
+++ b/build.xml
@@ -229,7 +229,7 @@ alias jedit=java -Xmx10g -Xss1m -jar $JEDIT_JAR
     -->
 
     <target name="test" depends="test.unit"/>
-    <target name="test.unit" depends="clean,compile.test" description="Runs the UnitTestSuite">
+    <target name="test.unit" depends="compile.test" description="Runs the UnitTestSuite">
         <junit printsummary="yes"
                haltonfailure="yes"
                showoutput="yes"
