--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,7 @@
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
 #build.home=build
-#build.classes.dir=${build.home}/classes
+build.classes.dir=${build.home}/classes
 #build.test.classes.dir=${build.home}/test/classes
 # Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
@@ -68,7 +68,8 @@ run.classpath=\
     ${build.classes.dir}:\
     lib/minlog-1.3.1.jar:\
     lib/objenesis-3.4.jar:\
-    lib/reflectasm-1.11.9.jar
+    lib/reflectasm-1.11.9.jar:\
+    lib/tomcat-servlet-api-9.0.97.jar
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
