--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -1,6 +1,6 @@
 # This workflow will build a Java project with Ant
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-ant
-name: 'Java CI with Ant / Build sumojedit'
+name: 'Java CI with Ant / Publish sumojedit'
 
 on:
   push:
@@ -119,7 +119,7 @@ jobs:
 #        working-directory: ./SUMOjEdit
 #        run: ant test.integration
 
-  build-sumojedit:
+  publish-sumojedit:
     runs-on: ubuntu-latest
     needs: build-test-upload
     steps:
