--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -143,7 +143,7 @@ jobs:
 
       - name: Set image account name
         env:
-          DOCKER_ACCOUNT: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKER_ACCOUNT: ${{ secrets.DOCKER_USERNAME }}
         run: |
           echo "IMAGE_ACCOUNT=${DOCKER_ACCOUNT:-$DEFAULT_DOCKER_ACCOUNT}" >> $GITHUB_ENV
 
