--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -159,6 +159,7 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Docker Hub Description
+        if: github.event_name == 'push'
         uses: peter-evans/dockerhub-description@v4
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
