--- a/build.xml
+++ b/build.xml
@@ -183,7 +183,7 @@
 # SUMOjEdit
 export JEDIT_HOME=~/.jedit
 export JEDIT_JAR=/usr/share/jedit/jedit.jar
-alias jedit=java -Xmx10g -Xss1m -jar $JEDIT_JAR
+alias jedit="java -Xmx10g -Xss1m -jar $JEDIT_JAR"
 </echo>
     </target>
 
@@ -192,7 +192,7 @@ alias jedit=java -Xmx10g -Xss1m -jar $JEDIT_JAR
 # SUMOjEdit
 export JEDIT_HOME=~/Library/jEdit
 export JEDIT_JAR=/Applications/jEdit.app/Contents/Java/jedit.jar
-alias jedit=java -Xmx10g -Xss1m -jar $JEDIT_JAR
+alias jedit="java -Xmx10g -Xss1m -jar $JEDIT_JAR"
 </echo>
     </target>
 
