--- a/build.xml
+++ b/build.xml
@@ -146,7 +146,7 @@
         <delete includeemptydirs="true" failonerror="false">
             <fileset dir="${build.home}"/>
         </delete>
-        <delete file="SUMOjEdit.jar"/>
+        <delete file="${app.name}.jar"/>
 
         <!-- for dep updates, clean ${jedit.home}/jars -->
         <delete includeemptydirs="true" failonerror="false">
