--- a/docker/sumojedit/Dockerfile
+++ b/docker/sumojedit/Dockerfile
@@ -29,9 +29,13 @@ RUN echo 'alias jedit="java -Xmx10g -Xss1m -jar $JEDIT_JAR"' >> ~/.bashrc
 COPY --from=builder \
     /usr/local/bin/e_ltb_runner /usr/local/bin/e_ltb_runner
 COPY --from=builder \
+    /usr/local/bin/eprover /usr/local/bin/eprover
+
+COPY --from=builder \
     /usr/local/bin/vampire /usr/local/bin/vampire
 COPY --from=builder \
     /usr/local/bin/libz3.* /usr/local/bin/
+
 COPY --from=builder \
     $CATALINA_HOME/webapps/sigma.war $CATALINA_HOME/webapps/sigma.war
 
