--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,7 +2,7 @@ build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
 #build.home=build
 build.classes.dir=${build.home}/classes
-#build.test.classes.dir=${build.home}/test/classes
+build.test.classes.dir=${build.home}/test/classes
 # Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
 buildfile=nbproject/ide-targets.xml
@@ -29,12 +29,9 @@ file.reference.unit-java=test/unit/java
 includes=**
 jar.compress=false
 javac.classpath=\
-    lib/antlr4-runtime-4.9.3.jar:\
     lib/ErrorList.jar:\
     lib/guava-19.0.jar:\
-    lib/java-prolog-parser-2.0.2.jar:\
     ${jedit.jar}:\
-    lib/kryo-5.6.2.jar:\
     lib/sigmaAntlr.jar:\
     lib/sigmakee.jar:\
     lib/sigmaUtils.jar:\
