--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,7 +2,7 @@ build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
 #build.home=build
 build.classes.dir=${build.home}/classes
-build.test.classes.dir=${build.home}/test/classes
+#build.test.classes=${build.home}/test/classes
 # Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
 buildfile=nbproject/ide-targets.xml
