--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -63,6 +63,8 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
+    lib/antlr4-runtime-4.9.3.jar:\
+    lib/kryo-5.6.2.jar:\
     lib/minlog-1.3.1.jar:\
     lib/objenesis-3.4.jar:\
     lib/reflectasm-1.11.9.jar:\
@@ -76,10 +78,7 @@ run.modulepath=\
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes}:\
-    lib/minlog-1.3.1.jar:\
-    lib/objenesis-3.4.jar:\
-    lib/reflectasm-1.11.9.jar:\
-    lib/tomcat-servlet-api-9.0.97.jar
+    ${run.classpath}
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
