--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -70,6 +70,13 @@ sumojedit.query-exp.label=query on highlighted expression
 sumojedit.to-tptp.label=SUO-KIF to TPTP
 sumojedit.from-tptp.label=SUO-KIF from TPTP
 
+# Code completion (doesn't seem necessary as we're just adding functionality)
+#plugin.com.articulate.sigma.jedit.SUOKifCompletionHandler.name=SUO-KIF Completion
+#plugin.com.articulate.sigma.jedit.SUOKifCompletionHandler.author=GPT-4
+#plugin.com.articulate.sigma.jedit.SUOKifCompletionHandler.version=1.0.0
+#plugin.com.articulate.sigma.jedit.SUOKifCompletionHandler.description=Lightweight SUO-KIF code completion
+#plugin.com.articulate.sigma.jedit.SUOKifCompletionHandler.class=com.articulate.sigma.jedit.SUOKifCompletionHandler
+
 # File system browser single menu item (not used)
 #plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.browser-menu-item=
 
